[gd_scene load_steps=63 format=4 uid="uid://cnvnbsupfdau4"]

[ext_resource type="Script" uid="uid://cjab70obtn2ow" path="res://game/game.gd" id="1_l8g03"]
[ext_resource type="Script" uid="uid://d2c82s4i8k7dc" path="res://game/rooms/room_selector.gd" id="2_4cobl"]
[ext_resource type="AudioStream" uid="uid://dqef6khyml52g" path="res://assets/music/crabcastle.mp3" id="2_ee6o4"]
[ext_resource type="PackedScene" uid="uid://68en2fypp2j5" path="res://upgrades/UpgradeUI.tscn" id="3_dakft"]
[ext_resource type="Script" uid="uid://dqdjo2qye7qv5" path="res://game/tower_damage.gd" id="4_cieqw"]
[ext_resource type="PackedScene" uid="uid://jbioikw54jg4" path="res://game_end/game_end.tscn" id="4_dxrkv"]
[ext_resource type="Shader" uid="uid://bf5fwipxptqdn" path="res://upgrades/blur.gdshader" id="4_u5opy"]
[ext_resource type="Script" uid="uid://daq0fcjji8v2n" path="res://game/gold_display.gd" id="6_hb504"]
[ext_resource type="Texture2D" uid="uid://dvlr1truseh3y" path="res://assets/sun-yellow.png" id="6_jucfl"]
[ext_resource type="FontFile" uid="uid://duybivoopja6f" path="res://assets/fonts/Candy Beans.otf" id="6_mhvfb"]
[ext_resource type="Shader" uid="uid://bvs3xyo6lff1h" path="res://assets/shader/reflection.gdshader" id="7_jdpby"]
[ext_resource type="Texture2D" uid="uid://cnk12qj5b8tpq" path="res://assets/cloud.png" id="8_58yx1"]
[ext_resource type="Script" uid="uid://bvgeo6l2ym3qs" path="res://game/happy_clouds.gd" id="8_hbvmx"]
[ext_resource type="Texture2D" uid="uid://dnivjwwausano" path="res://assets/room_details/empty.png" id="11_ee6o4"]
[ext_resource type="Shader" uid="uid://dur8qajqyjrlu" path="res://assets/shader/background.gdshader" id="11_hb504"]
[ext_resource type="Shader" uid="uid://bb1gwvblyt57i" path="res://assets/shader/castle.gdshader" id="12_hb504"]
[ext_resource type="Texture2D" uid="uid://dk2wwehlijrdc" path="res://assets/room_details/scaffold.png" id="12_vkvnp"]
[ext_resource type="Texture2D" uid="uid://od7uidhhkf5r" path="res://assets/room_details/palisades.png" id="13_pxxsx"]
[ext_resource type="Texture2D" uid="uid://cygfg2olr2wsn" path="res://assets/room_details/bottom.png" id="14_u8s88"]
[ext_resource type="Texture2D" uid="uid://bkmhnjxdeyq3f" path="res://assets/room_details/palisades_mirror.png" id="15_dxwpq"]
[ext_resource type="Texture2D" uid="uid://bqb2pyrlvwfv1" path="res://assets/seabed.png" id="15_leid8"]
[ext_resource type="Texture2D" uid="uid://cefnmebb7e6h4" path="res://assets/room_details/build.png" id="16_u8s88"]
[ext_resource type="Texture2D" uid="uid://dk0gh0dlml27l" path="res://assets/crane_game_arm.png" id="17_jucfl"]
[ext_resource type="Script" uid="uid://c0htur6o5hwgt" path="res://game/rooms/tower.gd" id="17_ln7ps"]
[ext_resource type="Script" uid="uid://ci4t2wa870mqd" path="res://game/crane.gd" id="18_jdpby"]
[ext_resource type="Texture2D" uid="uid://bcp5t1pl737lf" path="res://assets/room_details/paper_blend.png" id="19_dxwpq"]
[ext_resource type="Script" uid="uid://b7x38g8nwawmq" path="res://game/enemy_manager.gd" id="19_pxxsx"]
[ext_resource type="Script" uid="uid://biswc6ipcfiun" path="res://game/cleanup_proj.gd" id="20_u8s88"]
[ext_resource type="Texture2D" uid="uid://bg6np85mcxhrw" path="res://assets/bench.png" id="21_5e03w"]
[ext_resource type="Texture2D" uid="uid://bewvh84gv88sy" path="res://assets/money.png" id="22_8bboj"]
[ext_resource type="Script" uid="uid://b7oo264lufx8i" path="res://game/crane_tooltip.gd" id="22_fegy3"]
[ext_resource type="Shader" uid="uid://1hsrcasdr8yc" path="res://assets/shader/grayscale.gdshader" id="22_urpib"]
[ext_resource type="Texture2D" uid="uid://b1tvic7afvxmn" path="res://assets/heart.png" id="23_q52ks"]
[ext_resource type="Texture2D" uid="uid://cn5kqx8ahc3t6" path="res://assets/trash_can.png" id="29_gvtgv"]
[ext_resource type="Script" uid="uid://dy6w7t42yvbeo" path="res://game/trash_can.gd" id="30_5ywmu"]
[ext_resource type="Script" uid="uid://f3181yq0x2f4" path="res://game/trash_can_tooltip.gd" id="31_mhp6k"]
[ext_resource type="Script" uid="uid://dv8ryvt05fp74" path="res://game/tutorial.gd" id="32_posua"]
[ext_resource type="PackedScene" uid="uid://jopgqibdquxd" path="res://game/TutorialTextBox.tscn" id="32_pvdu1"]
[ext_resource type="Texture2D" uid="uid://dmnmkxsnexb3d" path="res://assets/room_details/arrow_down.png" id="33_cf130"]
[ext_resource type="PackedScene" uid="uid://buphc88egqhj5" path="res://menu/menu.tscn" id="36_vkvnp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lnu2h"]
shader = ExtResource("4_u5opy")
shader_parameter/amount = 2.5

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_u8s88"]
normal = Vector2(0.999987, -0.00502506)
distance = 366.005

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_mhvfb"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ee6o4"]
shader = ExtResource("11_hb504")
shader_parameter/water_height = 0.4
shader_parameter/sky_color = Color(0.458775, 0.633477, 0.987434, 1)
shader_parameter/water_color = Color(0.2349, 0.40743, 0.81, 1)
shader_parameter/underwater_color = Color(0.206505, 0.247084, 0.695142, 1)
shader_parameter/underwater_back = Color(0.443131, 0.236622, 0.139264, 1)
shader_parameter/surface_color = Color(0.235294, 0.407843, 0.811765, 1)
shader_parameter/foam_color = Color(0.698039, 0.996078, 0.996078, 1)
shader_parameter/foam_size = 0.005

[sub_resource type="Gradient" id="Gradient_dxwpq"]
colors = PackedColorArray(0.301961, 0.67451, 0.941176, 1, 0.409467, 0.166, 0.83, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_mhvfb"]
gradient = SubResource("Gradient_dxwpq")

[sub_resource type="ViewportTexture" id="ViewportTexture_jucfl"]
viewport_path = NodePath("SkyViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_58yx1"]
shader = ExtResource("7_jdpby")
shader_parameter/water_height = 0.1
shader_parameter/foam_size = 0.005

[sub_resource type="ViewportTexture" id="ViewportTexture_jdpby"]
viewport_path = NodePath("SkyViewport")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ee6o4"]
resource_name = "bg"
texture = ExtResource("11_ee6o4")
texture_region_size = Vector2i(464, 342)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mhvfb"]
resource_name = "palisades"
texture = ExtResource("13_pxxsx")
texture_region_size = Vector2i(464, 342)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_urpib"]
resource_name = "scaffold"
texture = ExtResource("12_vkvnp")
texture_region_size = Vector2i(464, 342)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5e03w"]
resource_name = "bottom"
texture = ExtResource("14_u8s88")
texture_region_size = Vector2i(464, 342)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_leid8"]
resource_name = "palisades_mirror"
texture = ExtResource("15_dxwpq")
texture_region_size = Vector2i(464, 342)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dxwpq"]
resource_name = "buildable"
texture = ExtResource("16_u8s88")
texture_region_size = Vector2i(464, 342)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_vsp63"]
tile_size = Vector2i(464, 342)
sources/0 = SubResource("TileSetAtlasSource_ee6o4")
sources/1 = SubResource("TileSetAtlasSource_mhvfb")
sources/6 = SubResource("TileSetAtlasSource_5e03w")
sources/7 = SubResource("TileSetAtlasSource_leid8")
sources/8 = SubResource("TileSetAtlasSource_dxwpq")
sources/2 = SubResource("TileSetAtlasSource_urpib")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hb504"]
shader = ExtResource("12_hb504")
shader_parameter/water_height = 0.4
shader_parameter/wet_color = Color(0.4512, 0.55296, 0.96, 1)
shader_parameter/foam_color = Color(0.698039, 0.996078, 0.996078, 1)
shader_parameter/border_color = Color(0.133333, 0.101961, 0.0823529, 1)
shader_parameter/target_color = Color(0.815686, 0.670588, 0.556863, 1)
shader_parameter/radius = 6.0
shader_parameter/samples = 15
shader_parameter/blend_texture = ExtResource("19_dxwpq")

[sub_resource type="ViewportTexture" id="ViewportTexture_b686c"]
viewport_path = NodePath("TowerViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cieqw"]
shader = ExtResource("22_urpib")

[sub_resource type="LabelSettings" id="LabelSettings_q52ks"]
font = ExtResource("6_mhvfb")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_pxxsx"]
font = ExtResource("6_mhvfb")
font_size = 48

[sub_resource type="ShaderMaterial" id="ShaderMaterial_urpib"]
shader = ExtResource("22_urpib")

[node name="Game" type="Node2D"]
process_mode = 1
script = ExtResource("1_l8g03")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("2_ee6o4")
volume_db = -4.0
bus = &"Music"

[node name="Camera2D" type="Camera2D" parent="."]
material = SubResource("ShaderMaterial_lnu2h")
anchor_mode = 0

[node name="Damage" type="Area2D" parent="."]
monitorable = false
script = ExtResource("4_cieqw")

[node name="Left" type="CollisionShape2D" parent="Damage"]
position = Vector2(0, 540)
shape = SubResource("WorldBoundaryShape2D_u8s88")

[node name="Cleanup" type="Area2D" parent="."]
monitorable = false
script = ExtResource("20_u8s88")

[node name="Down" type="CollisionShape2D" parent="Cleanup"]
position = Vector2(960, 1080)
shape = SubResource("WorldBoundaryShape2D_mhvfb")

[node name="BgSkyWater" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_ee6o4")
position = Vector2(960.983, 540.769)
rotation = 3.14159
scale = Vector2(7.49574, 1078.82)
texture = SubResource("GradientTexture1D_mhvfb")

[node name="SkyViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(1920, 1080)

[node name="Sun-yellow" type="Sprite2D" parent="SkyViewport"]
position = Vector2(1602.75, 154.98)
scale = Vector2(0.337264, 0.337264)
texture = ExtResource("6_jucfl")

[node name="Sky" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("ViewportTexture_jucfl")

[node name="SkyReflection" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_58yx1")
offset_left = 1922.0
offset_top = 1081.0
offset_right = 3842.0
offset_bottom = 2161.0
rotation = 3.14159
texture = SubResource("ViewportTexture_jdpby")

[node name="Clouds" type="Node2D" parent="."]
script = ExtResource("8_hbvmx")

[node name="Base" type="Sprite2D" parent="Clouds"]
visible = false
texture = ExtResource("8_58yx1")

[node name="TowerViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(1920, 1080)

[node name="Tower" type="TileMapLayer" parent="TowerViewport"]
position = Vector2(89, 69)
scale = Vector2(0.35, 0.35)
tile_map_data = PackedByteArray("AAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAEAAAAAAAAAAAABAAAABwAAAAAAAAAAAAAAAQAAAAAAAAAAAAEAAAAAAAAAAAAAAAQAAAAAAAAAAAABAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAABAAUAAAAAAAAAAAABAAYABgAAAAAAAAAAAAYABgAAAAAAAAARAAEABgAAAAAAAAA=")
tile_set = SubResource("TileSet_vsp63")
script = ExtResource("17_ln7ps")

[node name="Seabed" type="Sprite2D" parent="TowerViewport"]
position = Vector2(1100, 919)
scale = Vector2(0.392897, 0.382396)
texture = ExtResource("15_leid8")

[node name="TowerTexture" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_hb504")
offset_left = 1.0
offset_right = 1921.0
offset_bottom = 1080.0
mouse_filter = 2
texture = SubResource("ViewportTexture_b686c")

[node name="BuildableIndicators" type="Node2D" parent="."]

[node name="BuildableLocation1" type="Sprite2D" parent="BuildableIndicators"]
visible = false
texture = ExtResource("33_cf130")

[node name="BuildableLocation2" type="Sprite2D" parent="BuildableIndicators"]
visible = false
texture = ExtResource("33_cf130")

[node name="TowerOverlay" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Bench" type="Sprite2D" parent="UI"]
position = Vector2(926, 999)
scale = Vector2(0.804878, 0.804878)
texture = ExtResource("21_5e03w")

[node name="Crane" type="Sprite2D" parent="UI/Bench"]
material = SubResource("ShaderMaterial_cieqw")
position = Vector2(-459.697, 1.24243)
scale = Vector2(0.187839, 0.187839)
texture = ExtResource("17_jucfl")
script = ExtResource("18_jdpby")

[node name="Crane Tooltip" type="Control" parent="UI/Bench"]
layout_mode = 3
anchors_preset = 0
offset_left = -499.0
offset_top = -41.9999
offset_right = -419.0
offset_bottom = 41.0001
script = ExtResource("22_fegy3")

[node name="Rooms" type="Node2D" parent="UI"]
position = Vector2(657, 947)
script = ExtResource("2_4cobl")

[node name="Start Next Wave" type="Button" parent="UI"]
offset_left = 1353.0
offset_top = 963.0
offset_right = 1587.0
offset_bottom = 1035.0
theme_override_fonts/font = ExtResource("6_mhvfb")
theme_override_font_sizes/font_size = 48
disabled = true
text = "Start Wave
"

[node name="gold_display" type="Label" parent="UI"]
offset_left = 272.471
offset_top = 961.0
offset_right = 376.471
offset_bottom = 1034.0
text = "0"
label_settings = SubResource("LabelSettings_q52ks")
vertical_alignment = 1
script = ExtResource("6_hb504")

[node name="health_display" type="Label" parent="UI"]
offset_left = 120.0
offset_top = 965.0
offset_right = 295.0
offset_bottom = 1029.0
text = "150"
label_settings = SubResource("LabelSettings_pxxsx")

[node name="Money" type="Sprite2D" parent="UI"]
position = Vector2(239.471, 997)
scale = Vector2(0.352941, 0.352941)
texture = ExtResource("22_8bboj")

[node name="Health" type="Sprite2D" parent="UI"]
position = Vector2(82, 995)
scale = Vector2(0.639995, 0.639995)
texture = ExtResource("23_q52ks")

[node name="wave_number" type="Label" parent="UI"]
offset_left = 1694.0
offset_top = 969.0
offset_right = 1896.0
offset_bottom = 1033.0
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("6_mhvfb")
theme_override_font_sizes/font_size = 48
text = "Wave 500"

[node name="TrashCan" type="Sprite2D" parent="UI"]
material = SubResource("ShaderMaterial_urpib")
position = Vector2(462, 997)
scale = Vector2(0.215798, 0.215798)
texture = ExtResource("29_gvtgv")
script = ExtResource("30_5ywmu")

[node name="Tooltip" type="Control" parent="UI/TrashCan"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -148.0
offset_top = -185.0
offset_right = -154.0
offset_bottom = -188.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("31_mhp6k")

[node name="UpgradeUi" parent="." instance=ExtResource("3_dakft")]
offset = Vector2(250, -80)
transform = Transform2D(1, 0, 0, 1, 250, -80)

[node name="GameEnd" parent="." instance=ExtResource("4_dxrkv")]
process_mode = 3
visible = false

[node name="EnemyManager" type="Node2D" parent="."]
position = Vector2(870, 570)
script = ExtResource("19_pxxsx")

[node name="Floor1" type="Node2D" parent="EnemyManager"]
position = Vector2(1131, 178)

[node name="Floor2" type="Node2D" parent="EnemyManager"]
position = Vector2(1124, 48)

[node name="Floor3" type="Node2D" parent="EnemyManager"]
position = Vector2(1124, -79)

[node name="Floor4" type="Node2D" parent="EnemyManager"]
position = Vector2(1125, -196)

[node name="Floor5" type="Node2D" parent="EnemyManager"]
position = Vector2(1124, -329)

[node name="SeaOverlay" parent="." instance=ExtResource("36_vkvnp")]
visible = false

[node name="Tutorial" type="CanvasLayer" parent="."]
script = ExtResource("32_posua")

[node name="One" type="CanvasLayer" parent="Tutorial"]
visible = false

[node name="TutorialTextBox" parent="Tutorial/One" instance=ExtResource("32_pvdu1")]
position = Vector2(26, 19)
text = "The seagulls are attacking! We have to build a castle!"

[node name="Two" type="CanvasLayer" parent="Tutorial"]
visible = false

[node name="TutorialTextBox" parent="Tutorial/Two" instance=ExtResource("32_pvdu1")]
position = Vector2(26, 19)
text = "Drag your weapon onto the platform."

[node name="Sprite2D" type="Sprite2D" parent="Tutorial/Two"]
position = Vector2(688, 877)
texture = ExtResource("33_cf130")

[node name="Three" type="CanvasLayer" parent="Tutorial"]
visible = false

[node name="TutorialTextBox" parent="Tutorial/Three" instance=ExtResource("32_pvdu1")]
position = Vector2(26, 19)
text = "Press start wave and defend!"

[node name="Sprite2D" type="Sprite2D" parent="Tutorial/Three"]
position = Vector2(1474, 896)
texture = ExtResource("33_cf130")

[node name="HintOne" type="CanvasLayer" parent="Tutorial"]
visible = false

[node name="TutorialTextBox" parent="Tutorial/HintOne" instance=ExtResource("32_pvdu1")]
position = Vector2(26, 19)
text = "You can drag the claw to a room to remove it."

[node name="Sprite2D" type="Sprite2D" parent="Tutorial/HintOne"]
position = Vector2(555, 923)
scale = Vector2(0.65625, 0.65625)
texture = ExtResource("33_cf130")

[node name="HintTwo" type="CanvasLayer" parent="Tutorial"]
visible = false

[node name="TutorialTextBox" parent="Tutorial/HintTwo" instance=ExtResource("32_pvdu1")]
position = Vector2(26, 19)
text = "Rooms can be dragged to the trash can to sell them."

[node name="Sprite2D" type="Sprite2D" parent="Tutorial/HintTwo"]
position = Vector2(460, 913)
scale = Vector2(0.640625, 0.640625)
texture = ExtResource("33_cf130")

[connection signal="balance_changed" from="." to="UI/gold_display" method="set_gold"]
[connection signal="balance_changed" from="." to="UpgradeUi" method="on_balance_change"]
[connection signal="game_end" from="." to="." method="_on_game_end"]
[connection signal="game_end" from="." to="GameEnd" method="show"]
[connection signal="rooms_loaded" from="." to="UpgradeUi" method="on_rooms_loaded"]
[connection signal="wave_end" from="." to="UI/Start Next Wave" method="show"]
[connection signal="wave_end" from="." to="Tutorial" method="_on_game_wave_end"]
[connection signal="wave_start" from="." to="Tutorial" method="_on_game_wave_start"]
[connection signal="area_entered" from="Damage" to="Damage" method="_on_area_entered"]
[connection signal="area_entered" from="Cleanup" to="Cleanup" method="_on_area_entered"]
[connection signal="removal_service" from="TowerViewport/Tower" to="." method="_on_tower_removal_service"]
[connection signal="removal_service" from="TowerViewport/Tower" to="UI/Rooms" method="add_room"]
[connection signal="room_placed" from="TowerViewport/Tower" to="." method="room_placed"]
[connection signal="room_placed" from="TowerViewport/Tower" to="UI/Rooms" method="remove_room"]
[connection signal="room_placed" from="TowerViewport/Tower" to="Tutorial" method="_on_tower_room_placed"]
[connection signal="sell" from="TowerViewport/Tower" to="UI/Rooms" method="_on_tower_sell"]
[connection signal="room_selected" from="UI/Rooms" to="TowerViewport/Tower" method="set_current_room"]
[connection signal="sell" from="UI/Rooms" to="." method="_on_rooms_sell"]
[connection signal="button_down" from="UI/Start Next Wave" to="." method="_on_start_next_wave_button_down"]
[connection signal="upgrade_selected" from="UpgradeUi" to="." method="room_selected"]
[connection signal="upgrade_selected" from="UpgradeUi" to="UI/Rooms" method="add_room"]
[connection signal="upgrade_selected" from="UpgradeUi" to="Tutorial" method="_on_upgrade_ui_upgrade_selected"]
